syntax = "proto2";

option java_outer_classname = "RecordLayerDemoProto";

import "record_metadata_options.proto";

message Order {
    optional int64 order_id = 1;
    optional Flower flower = 2;
    optional int32 price = 3;
}

message Flower {
    optional string type = 1;
    optional Color color = 2;
}

enum Color {
    RED = 1;
    BLUE = 2;
    YELLOW = 3;
    PINK = 4;
}


message SomeMore {
    optional string name = 1;
    optional int32 id = 2;
    optional int32 some_int = 3;
    optional Color color = 4;
}


message UnionDescriptor {
    option (com.apple.foundationdb.record.record).usage = UNION;
    optional Order _Order = 1;
    optional SomeMore _SomeMore = 2;

}
